k8s/base/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: farmhand
spec:
  ports:
    - port: 8080
  selector:
    app: farmhand

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: farmhand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmhand
  template:
    metadata:
      labels:
        app: farmhand
    spec:
      containers:
        - name: auth
          image: auth:dev
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
